--- a/requirements.txt
+++ b/requirements.txt
@@ -2,27 +2,36 @@ appdirs==1.4.4
 attrs==20.3.0
 autoflake==1.4
 black==20.8b1
-certifi==2020.11.8
+certifi==2020.12.5
 click==7.1.2
-h11==0.11.0
+coverage==5.3.1
+h11==0.12.0
 httpcore==0.12.2
 httpx==0.16.1
-idna==2.10
+idna==3.1
 iniconfig==1.1.1
-isort==5.6.4
+isort==5.7.0
 loguru==0.5.3
+multidict==5.1.0
 mypy-extensions==0.4.3
 mypy==0.790
-packaging==20.7
+packaging==20.8
 pathspec==0.8.1
 pluggy==0.13.1
-py==1.9.0
+py==1.10.0
 pyflakes==2.2.0
 pyparsing==2.4.7
-pytest==6.1.2
+pytest-cov==2.10.1
+pytest-vcr==1.0.2
+pytest==6.2.1
+pyyaml==5.3.1
 regex==2020.11.13
 rfc3986[idna2008]==1.4.0
+six==1.15.0
 sniffio==1.2.0
 toml==0.10.2
-typed-ast==1.4.1
+typed-ast==1.4.2
 typing-extensions==3.7.4.3
+vcrpy==4.1.1
+wrapt==1.12.1
+yarl==1.6.3
