--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,43 @@
-appdirs==1.4.4
-attrs==20.3.0
+anyio==3.4.0
+atomicwrites==1.4.0
+attrs==21.4.0
 autoflake==1.4
-black==20.8b1
-certifi==2020.12.5
-click==7.1.2
-coverage==5.3.1
+black==21.12b0
+certifi==2021.10.8
+charset-normalizer==2.0.10
+click==8.0.3
+colorama==0.4.4
+coverage[toml]==6.2
 h11==0.12.0
-httpcore==0.12.2
-httpx==0.16.1
-idna==3.1
+httpcore==0.14.4
+httpx==0.21.3
+idna==3.3
 iniconfig==1.1.1
-isort==5.7.0
+inject==4.3.1
+isort==5.10.1
 loguru==0.5.3
-multidict==5.1.0
+multidict==5.2.0
+mypy==0.931
 mypy-extensions==0.4.3
-mypy==0.790
-packaging==20.8
-pathspec==0.8.1
-pluggy==0.13.1
-py==1.10.0
-pyflakes==2.2.0
-pyparsing==2.4.7
-pytest-cov==2.10.1
+packaging==21.3
+pathspec==0.9.0
+platformdirs==2.4.1
+pluggy==1.0.0
+py==1.11.0
+pyflakes==2.4.0
+pyparsing==3.0.6
+pytest==6.2.5
+pytest-asyncio==0.16.0
+pytest-cov==3.0.0
 pytest-vcr==1.0.2
-pytest==6.2.1
-pyyaml==5.3.1
-regex==2020.11.13
-rfc3986[idna2008]==1.4.0
-six==1.15.0
+pyyaml==6.0
+rfc3986[idna2008]==1.5.0
+six==1.16.0
 sniffio==1.2.0
 toml==0.10.2
-typed-ast==1.4.2
-typing-extensions==3.7.4.3
+tomli==1.2.3
+typing-extensions==4.0.1
 vcrpy==4.1.1
-wrapt==1.12.1
-yarl==1.6.3
+win32-setctime==1.0.4
+wrapt==1.13.3
+yarl==1.7.2
