--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-anyio==3.4.0
+anyio==3.5.0
 atomicwrites==1.4.0
 attrs==21.4.0
 autoflake==1.4
@@ -24,6 +24,7 @@ pathspec==0.9.0
 platformdirs==2.4.1
 pluggy==1.0.0
 py==1.11.0
+pydantic==1.9.0
 pyflakes==2.4.0
 pyparsing==3.0.6
 pytest==6.2.5
@@ -36,6 +37,7 @@ six==1.16.0
 sniffio==1.2.0
 toml==0.10.2
 tomli==1.2.3
+types-setuptools==57.4.7
 typing-extensions==4.0.1
 vcrpy==4.1.1
 win32-setctime==1.0.4
