--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,10 @@ exclude =
 # Add here test requirements (semicolon/line-separated)
 testing =
     pytest
+    pytest-asyncio
     pytest-cov
+    pytest-vcr
+    pytest-xdist
 
 [options.entry_points]
 # Add here console scripts like:
@@ -76,6 +79,10 @@ norecursedirs =
     build
     .tox
 testpaths = tests
+asyncio_mode = auto
+
+[isort]
+profile = black
 
 [aliases]
 dists = bdist_wheel
