Change environment variables to global in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: python
 
 env:
-  - IP_API_URL=https://api64.ipify.org?format=json CLOUDFLARE_TOKEN=TEST
+  global:
+    - IP_API_URL=https://api64.ipify.org?format=json
+    - CLOUDFLARE_TOKEN=TEST
 
 python:
   - "3.8"
