Update logs, add `Typer`, add commands, pass `Settings` to inject, fix tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,22 +2,22 @@ anyio==3.5.0
 atomicwrites==1.4.0
 attrs==21.4.0
 autoflake==1.4
-black==21.12b0
+black==22.1.0
 certifi==2021.10.8
-charset-normalizer==2.0.10
+charset-normalizer==2.0.11
 click==8.0.3
 colorama==0.4.4
-coverage[toml]==6.2
+coverage[toml]==6.3.1
 execnet==1.9.0
 h11==0.12.0
-httpcore==0.14.4
-httpx==0.21.3
+httpcore==0.14.7
+httpx==0.22.0
 idna==3.3
 iniconfig==1.1.1
 inject==4.3.1
 isort==5.10.1
-loguru==0.5.3
-multidict==5.2.0
+loguru==0.6.0
+multidict==6.0.2
 mypy==0.931
 mypy-extensions==0.4.3
 packaging==21.3
@@ -27,22 +27,23 @@ pluggy==1.0.0
 py==1.11.0
 pydantic==1.9.0
 pyflakes==2.4.0
-pyparsing==3.0.6
-pytest==6.2.5
+pyparsing==3.0.7
+pytest==7.0.0
 pytest-asyncio==0.17.2
 pytest-cov==3.0.0
 pytest-forked==1.4.0
+pytest-httpx==0.20.0
 pytest-vcr==1.0.2
 pytest-xdist==2.5.0
 pyyaml==6.0
 rfc3986[idna2008]==1.5.0
 six==1.16.0
 sniffio==1.2.0
-toml==0.10.2
-tomli==1.2.3
-types-setuptools==57.4.7
+tomli==2.0.0
+typer==0.4.0
+types-setuptools==57.4.8
 typing-extensions==4.0.1
 vcrpy==4.1.1
-win32-setctime==1.0.4
+win32-setctime==1.1.0
 wrapt==1.13.3
 yarl==1.7.2
