--- a/setup.cfg
+++ b/setup.cfg
@@ -53,8 +53,8 @@ testing =
 
 [options.entry_points]
 # Add here console scripts like:
-# console_scripts =
-#     script_name = test.module:function
+console_scripts =
+    cloudflare_dns_updater = cloudflare_dns_updater.entrypoints.cli.main:run
 # For example:
 # console_scripts =
 #     fibonacci = test.skeleton:run
