--- a/tests/implementation/services/dns/cassettes/test_should_update_multiple_dns_records.yaml
+++ b/tests/implementation/services/dns/cassettes/test_should_update_multiple_dns_records.yaml
@@ -1,6 +1,6 @@
 interactions:
 - request:
-    body: '{"content": "142.250.203.206", "name": "bitwarden.altosterino.com", "proxied":
+    body: '{"content": "142.250.203.206", "name": "bitwarden.example.com", "proxied":
       true, "ttl": 1, "type": "A"}'
     headers:
       authorization:
@@ -14,7 +14,7 @@ interactions:
     method: PUT
     uri: https://api.cloudflare.com/client/v4/zones/457aba5ea6227a7f4d672e8845a2d5e9/dns_records/16979338358f4a70eb95395dd3650503
   response:
-    content: '{"result":{"id":"16979338358f4a70eb95395dd3650503","zone_id":"457aba5ea6227a7f4d672e8845a2d5e9","zone_name":"altosterino.com","name":"bitwarden.altosterino.com","type":"A","content":"142.250.203.206","proxiable":true,"proxied":true,"ttl":1,"locked":false,"meta":{"auto_added":false,"managed_by_apps":false,"managed_by_argo_tunnel":false,"source":"primary"},"created_on":"2022-01-06T21:59:40.261728Z","modified_on":"2022-02-01T21:29:44.829678Z"},"success":true,"errors":[],"messages":[]}'
+    content: '{"result":{"id":"16979338358f4a70eb95395dd3650503","zone_id":"457aba5ea6227a7f4d672e8845a2d5e9","zone_name":"example.com","name":"bitwarden.example.com","type":"A","content":"142.250.203.206","proxiable":true,"proxied":true,"ttl":1,"locked":false,"meta":{"auto_added":false,"managed_by_apps":false,"managed_by_argo_tunnel":false,"source":"primary"},"created_on":"2022-01-06T21:59:40.261728Z","modified_on":"2022-02-01T21:29:44.829678Z"},"success":true,"errors":[],"messages":[]}'
     headers:
       CF-Cache-Status:
       - DYNAMIC
@@ -44,7 +44,7 @@ interactions:
     http_version: HTTP/1.1
     status_code: 200
 - request:
-    body: '{"content": "142.250.203.206", "name": "portainer.altosterino.com", "proxied":
+    body: '{"content": "142.250.203.206", "name": "portainer.example.com", "proxied":
       true, "ttl": 1, "type": "A"}'
     headers:
       authorization:
@@ -58,7 +58,7 @@ interactions:
     method: PUT
     uri: https://api.cloudflare.com/client/v4/zones/457aba5ea6227a7f4d672e8845a2d5e9/dns_records/17ba2313616ca4ec9be83de9b934790b
   response:
-    content: '{"result":{"id":"17ba2313616ca4ec9be83de9b934790b","zone_id":"457aba5ea6227a7f4d672e8845a2d5e9","zone_name":"altosterino.com","name":"portainer.altosterino.com","type":"A","content":"142.250.203.206","proxiable":true,"proxied":true,"ttl":1,"locked":false,"meta":{"auto_added":false,"managed_by_apps":false,"managed_by_argo_tunnel":false},"created_on":"2022-01-06T22:08:12.31788Z","modified_on":"2022-02-01T21:25:13.363978Z"},"success":true,"errors":[],"messages":[]}'
+    content: '{"result":{"id":"17ba2313616ca4ec9be83de9b934790b","zone_id":"457aba5ea6227a7f4d672e8845a2d5e9","zone_name":"example.com","name":"portainer.example.com","type":"A","content":"142.250.203.206","proxiable":true,"proxied":true,"ttl":1,"locked":false,"meta":{"auto_added":false,"managed_by_apps":false,"managed_by_argo_tunnel":false},"created_on":"2022-01-06T22:08:12.31788Z","modified_on":"2022-02-01T21:25:13.363978Z"},"success":true,"errors":[],"messages":[]}'
     headers:
       CF-Cache-Status:
       - DYNAMIC
