--- a/requirements.txt
+++ b/requirements.txt
@@ -8,15 +8,32 @@ charset-normalizer==2.0.11
 click==8.0.3
 colorama==0.4.4
 coverage[toml]==6.3.1
+csscompressor==0.9.5
 execnet==1.9.0
+ghp-import==2.0.2
+gitdb==4.0.9
+gitpython==3.1.26
 h11==0.12.0
+htmlmin==0.1.12
 httpcore==0.14.7
 httpx==0.22.0
 idna==3.3
+importlib-metadata==4.10.1
 iniconfig==1.1.1
 inject==4.3.1
 isort==5.10.1
+jinja2==3.0.3
+jsmin==3.0.1
 loguru==0.6.0
+markdown==3.3.6
+markupsafe==2.0.1
+mergedeep==1.3.4
+mike==1.1.2
+mkdocs==1.2.3
+mkdocs-git-revision-date-plugin==0.3.1
+mkdocs-material==8.1.10
+mkdocs-material-extensions==1.0.3
+mkdocs-minify-plugin==0.5.0
 multidict==6.0.2
 mypy==0.931
 mypy-extensions==0.4.3
@@ -27,23 +44,31 @@ pluggy==1.0.0
 py==1.11.0
 pydantic==1.9.0
 pyflakes==2.4.0
+pygments==2.11.2
+pymdown-extensions==9.1
 pyparsing==3.0.7
 pytest==7.0.0
-pytest-asyncio==0.17.2
+pytest-asyncio==0.18.0
 pytest-cov==3.0.0
 pytest-forked==1.4.0
 pytest-httpx==0.20.0
 pytest-vcr==1.0.2
 pytest-xdist==2.5.0
+python-dateutil==2.8.2
 pyyaml==6.0
+pyyaml-env-tag==0.1
 rfc3986[idna2008]==1.5.0
 six==1.16.0
+smmap==5.0.0
 sniffio==1.2.0
-tomli==2.0.0
+tomli==2.0.1
 typer==0.4.0
-types-setuptools==57.4.8
+types-setuptools==57.4.9
 typing-extensions==4.0.1
 vcrpy==4.1.1
+verspec==0.1.0
+watchdog==2.1.6
 win32-setctime==1.1.0
 wrapt==1.13.3
 yarl==1.7.2
+zipp==3.7.0
