--- a/requirements.in
+++ b/requirements.in
@@ -2,7 +2,7 @@ attrs
 autoflake
 black
 httpx
-inject
+inject==4.3.1
 isort
 loguru
 mike
@@ -11,11 +11,11 @@ mkdocs-git-revision-date-plugin
 mkdocs-material
 mkdocs-minify-plugin
 mypy
-pydantic
-pytest
+pydantic==1.9.0
+pytest>=7.3.0,<7.5.0
 pytest-asyncio
-pytest-cov
-pytest-httpx
+pytest-cov>=4.0.0,<5.0.0
+pytest-httpx==0.21.3
 pytest-vcr
 pytest-xdist
 typer
