--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,84 @@
-anyio==3.5.0
-atomicwrites==1.4.0
-attrs==21.4.0
-autoflake==1.4
-black==22.1.0
-certifi==2021.10.8
-charset-normalizer==2.0.11
-click==8.0.3
-colorama==0.4.4
-coverage[toml]==6.3.1
+anyio==4.5.2
+attrs==25.3.0
+autoflake==2.3.1
+babel==2.17.0
+backrefs==5.7.post1
+black==24.8.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.1.8
+colorama==0.4.6
+coverage[toml]==7.6.1
 csscompressor==0.9.5
-execnet==1.9.0
-ghp-import==2.0.2
-gitdb==4.0.9
-gitpython==3.1.26
-h11==0.12.0
-htmlmin==0.1.12
-httpcore==0.14.7
-httpx==0.22.0
-idna==3.3
-importlib-metadata==4.10.1
-iniconfig==1.1.1
+exceptiongroup==1.3.0
+execnet==2.1.1
+ghp-import==2.1.0
+gitdb==4.0.12
+gitpython==3.1.44
+h11==0.14.0
+htmlmin2==0.1.13
+httpcore==0.16.3
+httpx==0.23.3
+idna==3.10
+importlib-metadata==8.5.0
+importlib-resources==6.4.5
+iniconfig==2.1.0
 inject==4.3.1
-isort==5.10.1
-jinja2==3.0.3
+isort==5.13.2
+jinja2==3.1.6
 jsmin==3.0.1
-loguru==0.6.0
-markdown==3.3.6
-markupsafe==2.0.1
+loguru==0.7.3
+markdown==3.7
+markdown-it-py==3.0.0
+markupsafe==2.1.5
+mdurl==0.1.2
 mergedeep==1.3.4
-mike==1.1.2
-mkdocs==1.2.3
-mkdocs-git-revision-date-plugin==0.3.1
-mkdocs-material==8.1.10
-mkdocs-material-extensions==1.0.3
-mkdocs-minify-plugin==0.5.0
-multidict==6.0.2
-mypy==0.931
-mypy-extensions==0.4.3
-packaging==21.3
-pathspec==0.9.0
-platformdirs==2.4.1
-pluggy==1.0.0
-py==1.11.0
+mike==2.1.3
+mkdocs==1.6.1
+mkdocs-get-deps==0.2.0
+mkdocs-git-revision-date-plugin==0.3.2
+mkdocs-material==9.6.14
+mkdocs-material-extensions==1.3.1
+mkdocs-minify-plugin==0.8.0
+multidict==6.1.0
+mypy==1.14.1
+mypy-extensions==1.1.0
+packaging==25.0
+paginate==0.5.7
+pathspec==0.12.1
+platformdirs==4.3.6
+pluggy==1.5.0
+propcache==0.2.0
 pydantic==1.9.0
-pyflakes==2.4.0
-pygments==2.11.2
-pymdown-extensions==9.1
-pyparsing==3.0.7
-pytest==7.0.0
-pytest-asyncio==0.18.0
-pytest-cov==3.0.0
-pytest-forked==1.4.0
-pytest-httpx==0.20.0
+pyflakes==3.2.0
+pygments==2.19.1
+pymdown-extensions==10.15
+pyparsing==3.1.4
+pytest==7.4.4
+pytest-asyncio==0.23.8
+pytest-cov==4.1.0
+pytest-httpx==0.21.3
 pytest-vcr==1.0.2
-pytest-xdist==2.5.0
-python-dateutil==2.8.2
-pyyaml==6.0
+pytest-xdist==3.6.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pyyaml==6.0.2
 pyyaml-env-tag==0.1
+requests==2.32.3
 rfc3986[idna2008]==1.5.0
-six==1.16.0
-smmap==5.0.0
-sniffio==1.2.0
-tomli==2.0.1
-typer==0.4.0
-types-setuptools==57.4.9
-typing-extensions==4.0.1
-vcrpy==4.1.1
+rich==14.0.0
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+tomli==2.2.1
+typer==0.15.4
+types-setuptools==75.8.0.20250110
+typing-extensions==4.13.2
+urllib3==1.26.20
+vcrpy==6.0.2
 verspec==0.1.0
-watchdog==2.1.6
-win32-setctime==1.1.0
-wrapt==1.14.0
-zipp==3.7.0
+watchdog==4.0.2
+wrapt==1.17.2
+yarl==1.15.2
+zipp==3.20.2
